@@ -1,0 +1,2 @@
+/usr/share/python-hildon-dev/defs/*
+/usr/share/python-hildon-dev/examples/*
