@@ -1,0 +1,4 @@
+#!/bin/sh
+
+rm -rf /tmp/python-hildon-tests
+
