@@ -1,5 +1,6 @@
 python-hildon (0.9.0-1maemo6) unstable; urgency=low
 
+  [ Anderson Lizardo ]
   * hildonmodule.c: replace hardcoded constants with defines from
     hildon-defines.h.
   * hildon.override: add override for hildon_color_button_get_color (restores
@@ -12,7 +13,10 @@ python-hildon (0.9.0-1maemo6) unstable; urgency=low
     tests and an example.
   * Restore working examples and tests from previous version (0.8.9).
 
- -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Thu, 14 May 2009 13:49:15 -0400
+  [ Bruno dos Santos de Araujo ]
+  * Split package into -dev (examples, .defs) and -tests packages.
+
+ -- Bruno dos Santos de Araujo <bruno.araujo@indt.org.br>  Mon, 18 May 2009 15:13:15 -0400
 
 python-hildon (0.9.0-1maemo5) unstable; urgency=low
 
